--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,16 @@ SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
 openai==1.54.4
-google-generativeai==0.8.3
+google-generativeai==0.5.2
 boto3==1.35.67
 python-dotenv==1.0.1
+langchain-google-genai==1.0.5
+langchain==0.2.7
+langchain-openai==0.1.10
+langchain-community==0.2.7
+langchainhub==0.1.20
+supabase==2.5.0
+pgvector==0.2.4
+psycopg2-binary==2.9.9
 
-
-langchain_google_genai
 
