--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+chromadb>=0.4.0
+langchain-openai>=0.1.0
+numpy>=1.24.0
+psycopg2-binary>=2.9.0
+flask>=2.3.0
+flask-cors>=4.0.0
+openai>=1.0.0
+python-dotenv>=1.0.0
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
-flask-cors==6.0.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -9,16 +16,10 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
-openai==1.54.4
-python-dotenv==1.0.1
 langchain==0.2.7
-langchain-openai==0.1.10
 langchain-community==0.2.7
 langchainhub==0.1.20
-pgvector==0.2.4
-psycopg2-binary==2.9.9
 requests==2.32.3
 duckduckgo-search==6.1.12
 schedule==1.2.0
-numpy==1.24.3
 
