--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 chromadb>=0.4.0
 langchain-openai>=0.1.0
 numpy>=1.24.0
-psycopg2-binary>=2.9.0
-flask>=2.3.0
 flask-cors>=4.0.0
 openai>=1.0.0
 python-dotenv>=1.0.0
@@ -22,4 +20,6 @@ langchainhub==0.1.20
 requests==2.32.3
 duckduckgo-search==6.1.12
 schedule==1.2.0
+psycopg2-binary==2.9.7
+bcrypt==4.0.1
 
