--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,189 @@
-chromadb>=0.4.0
-langchain-openai>=0.1.0
-numpy>=1.24.0
-flask-cors>=4.0.0
-openai>=1.0.0
-python-dotenv>=1.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+arabic-reshaper==3.0.0
+asn1crypto==1.5.1
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.0.1
+beautifulsoup4==4.13.4
 blinker==1.9.0
+Brotli==1.1.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+chromadb==1.0.15
 click==8.2.1
+coloredlogs==15.0.1
+contourpy==1.3.2
+cryptography==45.0.5
+cssselect2==0.8.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+distro==1.7.0
+duckduckgo_search==6.1.12
+durationpy==0.10
+et_xmlfile==2.0.0
+fastapi==0.116.1
+filelock==3.18.0
 Flask==3.1.1
+flask-cors==6.0.1
 Flask-SQLAlchemy==3.1.1
+flatbuffers==25.2.10
+fonttools==4.59.0
+fpdf==1.7.2
+fpdf2==2.8.3
+frozenlist==1.7.0
+fsspec==2025.7.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.176.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+google-play-scraper==1.2.7
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.1
+grpcio-status==1.71.2
+h11==0.16.0
+hf-xet==1.1.5
+html5lib==1.1
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.33.4
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==3.0.2
-SQLAlchemy==2.0.41
-typing_extensions==4.14.0
-Werkzeug==3.1.3
+jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+kubernetes==33.1.0
 langchain==0.2.7
 langchain-community==0.2.7
+langchain-core==0.2.43
+langchain-openai==0.1.25
+langchain-text-splitters==0.2.4
 langchainhub==0.1.20
+langsmith==0.1.147
+lxml==6.0.0
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.3
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==1.47.1
+numpy==1.26.4
+oauthlib==3.3.1
+onnxruntime==1.22.1
+openai==1.97.0
+openpyxl==3.1.5
+opentelemetry-api==1.35.0
+opentelemetry-exporter-otlp-proto-common==1.35.0
+opentelemetry-exporter-otlp-proto-grpc==1.35.0
+opentelemetry-proto==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-semantic-conventions==0.56b0
+orjson==3.11.0
+oscrypto==1.3.0
+overrides==7.7.0
+packaging==24.2
+pandas==2.3.1
+pdf2image==1.17.0
+pillow==11.3.0
+playwright==1.53.0
+plotly==6.2.0
+posthog==5.4.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydyf==0.11.0
+pyee==13.0.0
+Pygments==2.19.2
+pyHanko==0.29.1
+pyhanko-certvalidator==0.27.0
+pyparsing==3.2.3
+pypdf==5.8.0
+pyphen==0.17.2
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreqwest_impersonate==0.5.3
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+reportlab==4.4.2
 requests==2.32.3
-duckduckgo-search==6.1.12
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.26.0
+rsa==4.9.1
 schedule==1.2.0
-
-bcrypt==4.0.1
-
-
-Flask-SQLAlchemy==3.1.1
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
-
+ssh-import-id==5.11
+starlette==0.47.1
+supervisor==4.2.1
+svglib==1.5.1
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==8.5.0
+tiktoken==0.9.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tokenizers==0.21.2
+tqdm==4.67.1
+typer==0.16.0
+types-requests==2.32.4.20250611
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritemplate==4.2.0
+uritools==5.0.0
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+weasyprint==65.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+xhtml2pdf==0.2.17
+yarl==1.20.1
+zipp==3.23.0
+zopfli==0.2.3.post1
