Revert "feat: Implementa Backlog Generator e Email Sender"

--- a/.env
+++ b/.env
@@ -1,27 +1,3 @@
-# Configurações da API OpenAI
-OPENAI_API_KEY=your_openai_api_key
-
-# Configurações da API Gemini (opcional)
-GEMINI_API_KEY=your_gemini_api_key
-
-# Configurações de E-mail (SMTP)
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your_email@gmail.com
-SMTP_PASSWORD=your_app_password
-SENDER_EMAIL=your_email@gmail.com
-MANAGER_EMAIL=manager@example.com
-
-# Configurações do Banco de Dados
-DB_PATH=/app/data/iara_flow.db
-
-# Configurações do Servidor
-HOST=0.0.0.0
-PORT=5000
-FLASK_ENV=production
-DEBUG=False
-
-# Configurações de Segurança
-SECRET_KEY=your_secret_key_here
-
-
+DATABASE_URL=postgresql://admin:admin@localhost:5432/admin
+OPENAI_API_KEY=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
+GIT_PAT=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
