--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ SENDER_EMAIL=your_email@gmail.com
 MANAGER_EMAIL=manager@example.com
 
 # Configurações do Banco de Dados
-DB_PATH=./data/iara_flow.db
+DB_PATH=./iara_flow.db
+
 
 # Configurações do Servidor
 HOST=0.0.0.0
