--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ OPENAI_API_KEY=your_openai_api_key
 # Configurações da API Gemini (opcional)
 GEMINI_API_KEY=your_gemini_api_key
 
+# Configurações da API Groq (opcional)
+GROQ_API_KEY=your_groq_api_key
+
 # Configurações de E-mail (SMTP)
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
