--- a/.env
+++ b/.env
@@ -27,3 +27,8 @@ DEBUG=False
 # Configurações de Segurança
 SECRET_KEY=iara-flow-secret-key-2025
 
+#e-mail envio
+EMAIL_GMAIL=cledsonborgesalves@gmail.com
+EMAIL_APP_PASSWORD=eapbanqlgbrrrims
+
+
