--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ MANAGER_EMAIL=manager@example.com
 
 # Configurações do Banco de Dados
 
-DB_PATH=/opt/iara-flow-bff/data/iara_flow.db
+DB_PATH=./data/iara_flow.db
 
 # Configurações do Servidor
 HOST=0.0.0.0
