--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DEBUG=False
 SECRET_KEY=iara-flow-secret-key-2025
 
 # Chaves de API
-GEMINI_API_KEY=AIzaSyDpLNBaYVrLSzxWj0kLD3v7n75pR5O-AfM
+GEMINI_API_KEY=sua key
 OPENAI_API_KEY=sk-placeholder
 
 # todos os secrets ficam no db
